# savantaudio-client

./: .gitignore  LICENSE  Pipfile  README.md  setup.cfg  setup.py
.github/workflows/: publish_to_pypi.yml
docs/source/: conf.py  index.rst  modules.rst
savantaudio/: __init__.py  __version__.py  client.py  entry_points.py
tests/: __init__.py  test.py
