[metadata]
name = savantaudio-client
version = 0.1.11
author = Adam Kropp
author_email = adam_kropp@yahoo.com
description = A client library to interact with Savant Audio Switches (e.g. SSA-3220).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adam_kropp/savantaudio-client
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers

[options]
python_requires = >=3.9
package_dir =
    = .
packages =
    savantaudio

[options.entry_points]
console_scripts =
  savantaudio-client = savantaudio.entry_points:main
